--- a/inventory/vagrant.yml
+++ b/inventory/vagrant.yml
@@ -12,7 +12,7 @@ all:
 
 mail:
   hosts:
-    ac-openbsd:
+    openbsd:
       mail_aliases_root: vagrant
-      mail_dkim_selector: ac-openbsd
-      mail_domain: ac-openbsd.localhost
+      mail_dkim_selector: openbsd
+      mail_domain: openbsd.localhost
