Replace flake8 with ruff; Resolve lints

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ trim_trailing_whitespace = true
 indent_size = 2
 tab_width = 2
 
-[*.{yaml,ansible-}lint]
+[*.{ansible-,yaml}lint]
 indent_size = 2
 tab_width = 2
 
