--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,14 +8,11 @@ any_errors_fatal = true
 bin_ansible_callbacks = true
 callbacks_enabled = timer
 command_warnings = false
-deprecation_warnings = false
 forks = 50
-gather_subset = hardware,min,network,virtual
-gather_timeout = 300
 gathering = smart
 inject_facts_as_vars = true
 internal_poll_interval = 0.01
-localhost_warning = false
+library = plugins/modules
 nocows = 1
 stdout_callback = community.general.yaml
 transport = ssh
