--- a/roles/mail/tasks/main.yml
+++ b/roles/mail/tasks/main.yml
@@ -3,7 +3,7 @@
 # Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
 - name: Install required packages
-  jcmdln.openbsd.pkg:
+  pkg:
     name: "{{ mail_packages }}"
     state: present
 
