--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
-    ansible-lint
-    flake8
     mypy
+    ruff
     pip-audit
+    ansible-lint
 ignore_basepython_conflict = true
 isolated_build = true
 minversion = 3.20
@@ -11,12 +11,7 @@ skip_missing_interpreters = true
 
 [testenv]
 allowlist_externals = poetry
-basepython = python3
 install_command = poetry install --only {packages}
-setenv =
-    PYTHONDONTWRITEBYTECODE=true
-    PYTHONPYCACHEPREFIX=/tmp
-    PYTHONUNBUFFERED=true
 skip_install = true
 
 [testenv:ansible-lint]
@@ -35,12 +30,6 @@ commands =
         {toxinidir}/site-sysupgrade.yml
 deps = ansible-lint
 
-[testenv:flake8]
-commands =
-    flake8 --version
-    flake8 {toxinidir}/plugins/modules/
-deps = flake8
-
 [testenv:mypy]
 commands =
     mypy --version
@@ -52,3 +41,9 @@ commands =
     pip-audit --version
     pip-audit
 deps = pip-audit
+
+[testenv:ruff]
+commands =
+    ruff --version
+    ruff check --diff {toxinidir}/plugins/modules/
+deps = ruff
