--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
+# SPDX-License-Identifier: ISC
+#
+# Copyright (c) 2023 Johnathan C. Maudlin <jcmdln@gmail.com>
+
 [tox]
 envlist =
     mypy
     ruff
-    pip-audit
     ansible-lint
 ignore_basepython_conflict = true
 isolated_build = true
@@ -10,24 +13,12 @@ minversion = 3.20
 skip_missing_interpreters = true
 
 [testenv]
-allowlist_externals = poetry
-install_command = poetry install --only {packages}
 skip_install = true
 
 [testenv:ansible-lint]
 commands =
     ansible-lint --version
-    ansible-lint --offline \
-        {toxinidir}/galaxy.yml \
-        {toxinidir}/handlers/ \
-        {toxinidir}/inventory/ \
-        {toxinidir}/plugins/ \
-        {toxinidir}/roles/ \
-        {toxinidir}/site-check.yml \
-        {toxinidir}/site-mail.yml \
-        {toxinidir}/site-pkg.yml \
-        {toxinidir}/site-syspatch.yml \
-        {toxinidir}/site-sysupgrade.yml
+    ansible-lint --offline
 deps = ansible-lint
 
 [testenv:mypy]
@@ -36,14 +27,10 @@ commands =
     mypy {toxinidir}/plugins/modules/
 deps = mypy
 
-[testenv:pip-audit]
-commands =
-    pip-audit --version
-    pip-audit
-deps = pip-audit
-
 [testenv:ruff]
 commands =
     ruff --version
     ruff check --diff {toxinidir}/plugins/modules/
-deps = ruff
+deps =
+    black>=23,<24
+    ruff>=0.0.250,<1
