--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: ISC
 #
-# Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>
+# Copyright (c) 2023 Johnathan C. Maudlin <jcmdln@gmail.com>
 
 # Ignore everything
 *
@@ -8,38 +8,29 @@
 # Include specific files
 !.ansible-lint
 !.editorconfig
-!.flake8
 !.gitignore
 !.prettierrc.yml
 !.yamllint
-!ansible.cfg
-!CNAME
+!CHANGELOG.md
 !galaxy.yml
 !LICENSE
-!poetry.lock
-!poetry.toml
+!notes.md
 !pyproject.toml
 !README.md
-!site-*.yml
 !tox.ini
-!Vagrantfile
 
 # Include files from subdirectories
 !.github/
 !.github/workflows/
 !.github/workflows/*.yml
+
 !.vscode/
 !.vscode/extensions.json
 !.vscode/settings.json
-!handlers/
-!handlers/main.yml
-!inventory/
-!inventory/vagrant.yml
+
+!meta/
+!meta/runtime.yml
+
 !plugins/
 !plugins/modules/
 !plugins/modules/*.py
-!roles/
-!roles/**/
-!roles/**/*.j2
-!roles/**/*.md
-!roles/**/*.yml
