Only lint on changes to branches

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,13 +6,15 @@ name: lint
 
 on:
   pull_request:
+    branches:
+      - "**"
     paths-ignore:
       - "**.md"
   push:
+    branches:
+      - "**"
     paths-ignore:
       - "**.md"
-    tags-ignore:
-      - "*"
   workflow_dispatch:
 
 jobs:
