--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -18,7 +18,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.11"
 
       - name: Install Ansible
         run: pip install ansible-core
