vscode: Fix file association with meta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
   "files.associations": {
     ".ansible-lint": "yaml",
     "**/.github/workflows/galaxy.yml": "yaml",
+    "**/meta/**/*.yml": "ansible",
     "galaxy.yml": "ansible"
   },
   "files.exclude": {
