Nope, that should work

--- a/.github/workflows/galaxy.yml
+++ b/.github/workflows/galaxy.yml
@@ -24,9 +24,7 @@ jobs:
         run: pip install ansible-core
 
       - name: Build collection
-        run: >
-          ansible-galaxy collection build
-          -o jcmdln-openbsd-${{ github.ref_name }}.tar.gz
+        run: ansible-galaxy collection build
 
       - name: Publish collection to Ansible Galaxy
         run: >
