--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ skip_install = true
 [testenv:ansible-lint]
 commands =
     ansible-lint --version
-    ansible-lint --offline
+    ansible-lint -v --project-dir {toxinidir}
 deps = ansible-lint
 
 [testenv:mypy]
