--- a/tox.ini
+++ b/tox.ini
@@ -32,5 +32,5 @@ commands =
     ruff --version
     ruff check --diff {toxinidir}/plugins/modules/
 deps =
-    black>=23,<24
-    ruff>=0.0.250,<1
+    black
+    ruff
