tox: Prepare a temp collections path for ansible-lint

--- a/tox.ini
+++ b/tox.ini
@@ -18,8 +18,11 @@ skip_install = true
 [testenv:ansible-lint]
 commands =
     ansible-lint --version
-    ansible-lint -v --project-dir {toxinidir}
+    ansible-galaxy collection install --collections-path=/tmp/ansible {toxinidir}
+    ansible-lint -v --offline --project-dir {toxinidir}
 deps = ansible-lint
+set_env =
+    ANSIBLE_COLLECTIONS_PATH=/tmp/ansible
 
 [testenv:mypy]
 commands =
